# Job-search

./: README.md  main.py  pyproject.toml
src/: classes_api.py  savedvac.py  user_inter.py  utils.py  vacancies.py
