[tool.poetry]
name = "coursejoboop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
coverage = "^7.3.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.13.1"
black = "^23.11.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
